<?xml version="1.0"?>
<package format="2">
  <name>da3_2</name>
  <version>0.0.0</version>
  <description>Package for Assignment 3, Step 2</description>

  <maintainer email="frady@unlv.nevada.edu">Quinn Frady</maintainer>
  <maintainer email="ramosn8@unlv.nevada.edu">Nathaniel Ramos</maintainer>

  <license>UNLV</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
  </export>
</package>
